gccida/c2/gen_block_die
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_block_die/src/dwarf2out.c:11719:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_block_die/src/dwarf2out.c:11731:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_block_die/src/dwarf2out.c:11732:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_block_die/src/dwarf2out.c:11785:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_block_die/src/dwarf2out.c:11893:41: error: use of undeclared identifier 'off_66511C'
sprintf( v27, "*.%s%u", ( const char *)&off_66511C, v3->identifier.id.len >> 2); 
                                        ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_block_die/src/obj/dwarf2out.o] Error 1
